@@ -1,3 +1,10 @@
+Pending changes in the mainline
+===============================
+
+* New default permissions to add/delete modalities through the Rest API
+  https://discourse.orthanc-server.org/t/managing-modalities-using-the-rest-api-and-keycloak/6137
+
+
 2025-08-13 - v 0.10.1
 =====================
 
